<resources>
    <string name="app_name">Toyoda_PhysicsCalculator</string>
    <string name="physics">PHYSICS</string>
    <string name="geometry">GEOMETRY</string>
    <string name="velocity">VELOCITY</string>
    <string name="rectPrism">RECTANGULAR PRISM</string>
    <string name="force">FORCE</string>
    <string name="sphere">SPHERE</string>
    <string name="weight">WEIGHT</string>
    <string name="cylinder">CYLINDER</string>
    <string name="density">DENSITY</string>
    <string name="cone">CONE</string>
    <string name="voltage">VOLTAGE</string>
    <string name="sqrPyramid">SQUARE PYRAMID</string>
    <string name="formula">Acceleration</string>
    <string name="input">Input Number…</string>
    <string name="calculate">Calculate</string>
    <string name="volume">Volume:</string>
    <string name="area">Area:</string>
</resources>